[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tokio"
path = "./src/main_tokio.rs"

[[bin]]
name = "asyncstd"
path = "./src/main_asyncstd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12"}
tokio = {version = "1.18", features = ["full"] }